TsImageDescriptor: added File caching in local file system